--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Model Viewer</title>
+  <title>AR Lungs Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -12,45 +12,48 @@
     }
     model-viewer {
       width: 100%;
-      height: 80vh;
+      height: 100vh;
     }
-    #controls {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-      background: #f4f4f4;
+    .HotspotAnnotation {
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 12px;
     }
-    select, button {
-      margin: 0 10px;
+    #ar-button {
+      display: block;
+      margin: 10px auto;
       padding: 10px 20px;
       font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button {
       background: #007bff;
       color: white;
       border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    button:hover {
+    #ar-button:hover {
       background: #0056b3;
+    }
+    #ar-prompt {
+      position: absolute;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      display: none;
+    }
+    #ar-prompt img {
+      width: 40px;
     }
   </style>
 </head>
 <body>
-  <div id="controls">
-    <select id="model-selector">
-      <option value="dino">Dino</option>
-      <option value="flag">Flag</option>
-    </select>
-    <button id="ar-button">View in AR</button>
-  </div>
+  <button id="ar-button">View in AR</button>
   
   <model-viewer 
-    src="dino.glb" 
-    ios-src="dino.usdz"
+    src="path_to_your_files/lungs.glb"  <!-- Update this path -->
+    ios-src="path_to_your_files/lungs.usdz"  <!-- Update this path -->
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
@@ -59,32 +62,53 @@
     shadow-intensity="1.74" 
     exposure="1"
     field-of-view="30deg"
-    autoplay
-    animation-name="*"
     id="viewer">
+    
+    <button class="Hotspot" slot="hotspot-1" data-position="-1.642m 2.28m -1.855m" data-normal="0.982m 0.19m 0m">
+      <div class="HotspotAnnotation">Trachea</div>
+    </button>
+    <button class="Hotspot" slot="hotspot-2" data-position="-1.603m 2.08m 1.745m" data-normal="0.982m 0.19m 0m">
+      <div class="HotspotAnnotation">Heart</div>
+    </button>
+    <button class="Hotspot" slot="hotspot-3" data-position="1.193m 0.07m -1.801m" data-normal="0m 1m 0m">
+      <div class="HotspotAnnotation">Lungs</div>
+    </button>
+    
+    <div class="progress-bar hide" slot="progress-bar">
+      <div class="update-bar"></div>
+    </div>
+    <div id="ar-prompt">
+      <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
   </model-viewer>
 
   <script>
-    const modelViewer = document.getElementById('viewer');
-    const modelSelector = document.getElementById('model-selector');
     const arButton = document.getElementById('ar-button');
+    const modelViewer = document.getElementById('viewer');
 
-    // Model sources
-    const models = {
-      dino: { src: 'dino.glb', ios: 'dino.usdz' },
-      flag: { src: 'flag.glb', ios: 'flag.usdz' }
-    };
-
-    // Update model-viewer when model is changed
-    modelSelector.addEventListener('change', (event) => {
-      const selectedModel = event.target.value;
-      modelViewer.setAttribute('src', models[selectedModel].src);
-      modelViewer.setAttribute('ios-src', models[selectedModel].ios);
-    });
-
-    // Activate AR when "View in AR" is clicked
+    // Add event listener for "View in AR" button
     arButton.addEventListener('click', () => {
       modelViewer.activateAR();
+    });
+
+    let isZoomedIn = false; // Tracks the zoom state
+    let defaultCameraOrbit = modelViewer.getAttribute('camera-orbit');
+
+    // Handle hotspot clicks
+    modelViewer.addEventListener('click', (event) => {
+      const hotspot = event.target.closest('.Hotspot');
+      if (hotspot) {
+        const position = hotspot.getAttribute('data-position');
+        if (!isZoomedIn) {
+          modelViewer.cameraOrbit = position.replace(/m/g, '') + ' 1m';
+          modelViewer.fieldOfView = '15deg'; // Narrow the view when zooming in
+          isZoomedIn = true;
+        } else {
+          modelViewer.cameraOrbit = defaultCameraOrbit;
+          modelViewer.fieldOfView = '30deg'; // Reset the view
+          isZoomedIn = false;
+        }
+      }
     });
   </script>
 </body>
