--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <button id="ar-button">View in AR</button>
   
   <model-viewer 
-    src="path_to_your_files/lungs.glb"  <!-- Update this path -->
-    ios-src="path_to_your_files/lungs.usdz"  <!-- Update this path -->
+    src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.glb?v=1736323346405" 
+    ios-src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.usdz?v=1736323372348"
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
