--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Lungs Viewer</title>
+  <title>AR Lungs Viewer with Animation</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
@@ -57,6 +57,8 @@
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
+    autoplay
+    animation-name="default"  <!-- Make sure to use the correct animation name if it’s different -->
     tone-mapping="neutral" 
     poster="poster.webp" 
     shadow-intensity="1.74" 
