--- a/index.html
+++ b/index.html
@@ -3,115 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Lungs Viewer with Animation</title>
+  <title>AR Lungs Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
     }
     model-viewer {
       width: 100%;
       height: 100vh;
     }
-    .HotspotAnnotation {
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 12px;
-    }
-    #ar-button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    #ar-button:hover {
-      background: #0056b3;
-    }
-    #ar-prompt {
-      position: absolute;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      display: none;
-    }
-    #ar-prompt img {
-      width: 40px;
-    }
   </style>
 </head>
 <body>
-  <button id="ar-button">View in AR</button>
-  
   <model-viewer 
     src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.glb?v=1736323346405" 
     ios-src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.usdz?v=1736323372348"
     ar 
     ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
-    autoplay
-    animation-name="default"  <!-- Make sure to use the correct animation name if it’s different -->
-    tone-mapping="neutral" 
-    poster="poster.webp" 
-    shadow-intensity="1.74" 
-    exposure="1"
-    field-of-view="30deg"
-    id="viewer">
-    
-    <button class="Hotspot" slot="hotspot-1" data-position="-1.642m 2.28m -1.855m" data-normal="0.982m 0.19m 0m">
-      <div class="HotspotAnnotation">Trachea</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-2" data-position="-1.603m 2.08m 1.745m" data-normal="0.982m 0.19m 0m">
-      <div class="HotspotAnnotation">Heart</div>
-    </button>
-    <button class="Hotspot" slot="hotspot-3" data-position="1.193m 0.07m -1.801m" data-normal="0m 1m 0m">
-      <div class="HotspotAnnotation">Lungs</div>
-    </button>
-    
-    <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
-    </div>
-    <div id="ar-prompt">
-      <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-    </div>
+    autoplay 
+    animation-name="default" 
+    exposure="1">
   </model-viewer>
-
-  <script>
-    const arButton = document.getElementById('ar-button');
-    const modelViewer = document.getElementById('viewer');
-
-    // Add event listener for "View in AR" button
-    arButton.addEventListener('click', () => {
-      modelViewer.activateAR();
-    });
-
-    let isZoomedIn = false; // Tracks the zoom state
-    let defaultCameraOrbit = modelViewer.getAttribute('camera-orbit');
-
-    // Handle hotspot clicks
-    modelViewer.addEventListener('click', (event) => {
-      const hotspot = event.target.closest('.Hotspot');
-      if (hotspot) {
-        const position = hotspot.getAttribute('data-position');
-        if (!isZoomedIn) {
-          modelViewer.cameraOrbit = position.replace(/m/g, '') + ' 1m';
-          modelViewer.fieldOfView = '15deg'; // Narrow the view when zooming in
-          isZoomedIn = true;
-        } else {
-          modelViewer.cameraOrbit = defaultCameraOrbit;
-          modelViewer.fieldOfView = '30deg'; // Reset the view
-          isZoomedIn = false;
-        }
-      }
-    });
-  </script>
 </body>
 </html>
