--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div id="button-container">
-    <button onclick="window.open('https://manobalproduction.github.io/Asthama/', '_blank')">ASTHAMA</button>
+    <button onclick="window.open('https://manobalproduction.github.io/Asthama/', '_blank')">ASTHMA</button>
   </div>
   <model-viewer 
     src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.glb?v=1736323346405" 
