--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       width: 100px;
       height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       background-color: #f4f4f4;
@@ -31,6 +32,7 @@
       color: white;
       border: none;
       border-radius: 4px;
+      margin-bottom: 10px;
     }
     #button-container button:hover {
       background-color: #0056b3;
@@ -45,6 +47,10 @@
 <body>
   <div id="button-container">
     <button onclick="window.open('https://manobalproduction.github.io/Asthma/', '_blank')">ASTHMA</button>
+    <button onclick="window.open('https://manobalproduction.github.io/Lung_Cancer/', '_blank')">LUNG CANCER</button>
+    <button onclick="window.open('https://manobalproduction.github.io/COPD/', '_blank')">COPD</button>
+    <button onclick="window.open('https://manobalproduction.github.io/PNEUMONIA/', '_blank')">PNEUMONIA</button>
+    <button onclick="window.open('https://manobalproduction.github.io/PULMONARY_FIBROSIS/', '_blank')">PULMONARY FIBROSIS</button>
   </div>
   <model-viewer 
     src="https://cdn.glitch.me/16112d14-3ddb-40f3-88b5-ffe7f74d4267/lungs.glb?v=1736323346405" 
