--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       z-index: 10;
     }
     #button-container button {
-      padding: 10px 20px;
+      width: 100%;
+      padding: 10px 0;
       font-size: 16px;
       cursor: pointer;
       background-color: #007BFF;
@@ -33,6 +34,7 @@
       border: none;
       border-radius: 4px;
       margin-bottom: 10px;
+      text-align: center;
     }
     #button-container button:hover {
       background-color: #0056b3;
