--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     #button-container button {
       width: 100%;
       padding: 10px 0;
-      font-size: 16px;
+      font-size: 14.4px; /* Reduced by 10% from 16px */
       cursor: pointer;
       background-color: #007BFF;
       color: white;
